SFDCProject/src/objects/Investor_Mapping__c.object
<CustomObject>
    <description>Used for Mapping Accounts and TE Fund Name</description>
    <fields>
        <fullName>Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investor Mappings (Account)</relationshipLabel>
        <relationshipName>Investor_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investor Mappings</relationshipLabel>
        <relationshipName>Investor_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TE_Fund_Name__c</fullName>
        <label>TE Fund Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Investor Mapping</label>
    <nameField>
        <label>Investor Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investor Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>